--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -10,7 +10,7 @@
 <body>
   <header></header>
   <main class="container my-3">
-    <h3>Mantenimiento de Clientes</h3>
+    <h3>Formulario de Mantenimiento</h3>
     <form action="" method="get" id="form-cliente" autocomplete="off">
       <input type="hidden" id="idcliente">
       
@@ -123,6 +123,6 @@
 
   <footer></footer>
 
-  <script src="./app.js"></script>
+  <script src="./apptiendas.js"></script>
 </body>
 </html>
